# ChangeLog for sys-devel/gcc
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-devel/gcc/ChangeLog,v 1.970 2013/10/07 11:32:45 ago Exp $

  07 Oct 2013; Agostino Sarubbo <ago@gentoo.org> gcc-4.7.3-r1.ebuild:
  Stable for x86, wrt bug #467274

*gcc-4.8.1-r1 (07 Oct 2013)

  07 Oct 2013; Ryan Hill <dirtyepic@gentoo.org> -gcc-4.8.1.ebuild,
  +gcc-4.8.1-r1.ebuild:
  4.8.1 p1.2: Fix build error in libatomic with --disable-dependency-tracking
  (bug #463463) and add -march=native support for Ivy Bridge and Haswell.
  Revision bump to push out changes. Restore keywords, including *-fbsd
  as [[noreturn]] is now implemented.

  06 Oct 2013; Agostino Sarubbo <ago@gentoo.org> gcc-4.7.3-r1.ebuild:
  Stable for arm, wrt bug #467274

  05 Oct 2013; Ryan Hill <dirtyepic@gentoo.org> -gcc-3.1.1-r2.ebuild,
  -gcc-3.2.2.ebuild, -gcc-3.2.3-r4.ebuild, gcc-3.4.6-r2.ebuild,
  gcc-4.1.2.ebuild, gcc-4.3.4.ebuild, gcc-4.3.6-r1.ebuild, gcc-4.4.3-r3.ebuild,
  gcc-4.4.4-r2.ebuild, gcc-4.4.5.ebuild, gcc-4.4.6-r1.ebuild, gcc-4.4.7.ebuild,
  gcc-4.5.3-r2.ebuild, gcc-4.5.4.ebuild, gcc-4.6.3.ebuild, -gcc-4.7.3.ebuild:
  Drop s390 and sh to ~arch. Remove old or unused.

  04 Oct 2013; Jeroen Roovers <jer@gentoo.org> gcc-4.7.3-r1.ebuild:
  Stable for HPPA (bug #467274).

  04 Oct 2013; Agostino Sarubbo <ago@gentoo.org> gcc-4.7.3-r1.ebuild:
  Stable for alpha, wrt bug #467274

  30 Sep 2013; Agostino Sarubbo <ago@gentoo.org> gcc-4.7.3-r1.ebuild:
  Stable for ppc64, wrt bug #467274

  28 Sep 2013; Agostino Sarubbo <ago@gentoo.org> gcc-4.7.3-r1.ebuild:
  Stable for ppc, wrt bug #467274

  27 Sep 2013; Agostino Sarubbo <ago@gentoo.org> gcc-4.7.3-r1.ebuild:
  Stable for amd64, wrt bug #467274

*gcc-4.7.3-r1 (24 Sep 2013)

  24 Sep 2013; Ryan Hill <dirtyepic@gentoo.org> +gcc-4.7.3-r1.ebuild:
  4.7.3 p1.3: Fix -march=native detection of Ivy Bridge processors. Revbump to
  push out changes.
